{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 746,
  "lineage": "c77e7312-99d6-00e0-8d09-02c851593e1b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gfetu_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0269f2b79c13622b1",
            "arn": "arn:aws:ec2:us-east-1:708113109960:instance/i-059de45a25e138194",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-059de45a25e138194",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gfetu_project_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06b9c68b8e5f9f9ad",
            "private_dns": "ip-192-168-2-115.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.115",
            "public_ip": "54.84.243.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c7e3f00069b9a965",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c3bdbc9da74c474b"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-057f5d15f574b7b7f",
            "tags": {
              "Name": "gfetu_backend"
            },
            "tags_all": {
              "Name": "gfetu_backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c3bdbc9da74c474b"
            ]
          },
          "dependencies": [
            "aws_key_pair.gfetu_project_ssh_key_pair",
            "aws_security_group.gfetu_sg_back",
            "aws_subnet.priv_subnet",
            "aws_vpc.gfetu_vpc",
            "data.aws_ami.ami",
            "tls_private_key.gfetu_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gfetu_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0269f2b79c13622b1",
            "arn": "arn:aws:ec2:us-east-1:708113109960:instance/i-012054ca0b574f091",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "r53-devops",
            "id": "i-012054ca0b574f091",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gfetu_project_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-020563c0749041ad8",
            "private_dns": "ip-192-168-1-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.153",
            "public_ip": "54.160.195.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00b72a5e75d4be5b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-091c8c10491f8290f"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0e7581aca666133ab",
            "tags": {
              "Name": "gfetu_frontend"
            },
            "tags_all": {
              "Name": "gfetu_frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-091c8c10491f8290f"
            ]
          },
          "dependencies": [
            "aws_key_pair.gfetu_project_ssh_key_pair",
            "aws_security_group.gfetu_sg_front",
            "aws_subnet.pub_subnet",
            "aws_vpc.gfetu_vpc",
            "data.aws_ami.ami",
            "data.aws_iam_role.r53_devops",
            "tls_private_key.gfetu_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:internet-gateway/igw-0fea4d07c942edb65",
            "id": "igw-0fea4d07c942edb65",
            "owner_id": "708113109960",
            "tags": {
              "Name": "gfetu_igw"
            },
            "tags_all": {
              "Name": "gfetu_igw"
            },
            "vpc_id": "vpc-034f7a7179eda1007"
          },
          "dependencies": [
            "aws_vpc.gfetu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:route-table/rtb-0047f66996044ba31",
            "id": "rtb-0047f66996044ba31",
            "owner_id": "708113109960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fea4d07c942edb65",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gfetu_route_table"
            },
            "tags_all": {
              "Name": "gfetu_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-034f7a7179eda1007"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.gfetu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086761e546a486766",
            "route_table_id": "rtb-0047f66996044ba31",
            "subnet_id": "subnet-0e7581aca666133ab"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_subnet.pub_subnet",
            "aws_vpc.gfetu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6bf5b02a89e5d0b",
            "route_table_id": "rtb-0047f66996044ba31",
            "subnet_id": "subnet-057f5d15f574b7b7f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_subnet.priv_subnet",
            "aws_vpc.gfetu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gfetu_sg_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:security-group/sg-0c3bdbc9da74c474b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3bdbc9da74c474b",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240606150520290600000001",
            "name_prefix": "terraform-",
            "owner_id": "708113109960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gfetu_sg_back"
            },
            "tags_all": {
              "Name": "gfetu_sg_back"
            },
            "timeouts": null,
            "vpc_id": "vpc-034f7a7179eda1007"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gfetu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gfetu_sg_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:security-group/sg-091c8c10491f8290f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091c8c10491f8290f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "137.194.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.2.0/24"
                ],
                "description": "",
                "from_port": 1935,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1935
              }
            ],
            "name": "terraform-20240606164212308600000001",
            "name_prefix": "terraform-",
            "owner_id": "708113109960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gfetu_sg_front"
            },
            "tags_all": {
              "Name": "gfetu_sg_front"
            },
            "timeouts": null,
            "vpc_id": "vpc-034f7a7179eda1007"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gfetu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:subnet/subnet-057f5d15f574b7b7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057f5d15f574b7b7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "708113109960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gfetu_priv_subnet"
            },
            "tags_all": {
              "Name": "gfetu_priv_subnet"
            },
            "vpc_id": "vpc-034f7a7179eda1007"
          },
          "dependencies": [
            "aws_vpc.gfetu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:subnet/subnet-0e7581aca666133ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7581aca666133ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "708113109960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gfetu_pub_subnet"
            },
            "tags_all": {
              "Name": "gfetu_pub_subnet"
            },
            "vpc_id": "vpc-034f7a7179eda1007"
          },
          "dependencies": [
            "aws_vpc.gfetu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gfetu_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:vpc/vpc-034f7a7179eda1007",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0b0b92189b34c3a06",
            "default_route_table_id": "rtb-0bfeb8a0c6fc0c340",
            "default_security_group_id": "sg-00f06ac0a075ee99e",
            "dhcp_options_id": "dopt-0e2f66217ab8d5ccf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-034f7a7179eda1007",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bfeb8a0c6fc0c340",
            "owner_id": "708113109960",
            "tags": {
              "Name": "gfetu_VPC"
            },
            "tags_all": {
              "Name": "gfetu_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:security-group-rule/sgr-016e6879c96046826",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-016e6879c96046826",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c3bdbc9da74c474b",
            "security_group_rule_id": "sgr-016e6879c96046826",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.gfetu_sg_back",
            "aws_vpc.gfetu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:security-group-rule/sgr-07d8380748a272173",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07d8380748a272173",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-091c8c10491f8290f",
            "security_group_rule_id": "sgr-07d8380748a272173",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.gfetu_sg_front",
            "aws_vpc.gfetu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:security-group-rule/sgr-0c661be87af0c9ce2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0c661be87af0c9ce2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-091c8c10491f8290f",
            "security_group_rule_id": "sgr-0c661be87af0c9ce2",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.gfetu_sg_front",
            "aws_vpc.gfetu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:security-group-rule/sgr-0df5c198b776694ba",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0df5c198b776694ba",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-091c8c10491f8290f",
            "security_group_rule_id": "sgr-0df5c198b776694ba",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.gfetu_sg_front",
            "aws_vpc.gfetu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ffmpeg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:security-group-rule/sgr-03cf0c534d5841f0f",
            "cidr_ipv4": "192.168.2.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 1935,
            "id": "sgr-03cf0c534d5841f0f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-091c8c10491f8290f",
            "security_group_rule_id": "sgr-03cf0c534d5841f0f",
            "tags": null,
            "tags_all": {},
            "to_port": 1935
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.gfetu_sg_front",
            "aws_subnet.priv_subnet",
            "aws_vpc.gfetu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:security-group-rule/sgr-01346f342ac20e2bd",
            "cidr_ipv4": "192.168.1.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-01346f342ac20e2bd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c3bdbc9da74c474b",
            "security_group_rule_id": "sgr-01346f342ac20e2bd",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.gfetu_sg_back",
            "aws_subnet.pub_subnet",
            "aws_vpc.gfetu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:security-group-rule/sgr-06f78df7387f09661",
            "cidr_ipv4": "137.194.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-06f78df7387f09661",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-091c8c10491f8290f",
            "security_group_rule_id": "sgr-06f78df7387f09661",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.gfetu_sg_front",
            "aws_vpc.gfetu_vpc"
          ]
        }
      ]
    }
  ]
}